# files-storage-system

./: Cargo.toml  README.md  test.torrent  test_file.txt
src/: lib.rs
src/core/: error.rs  mod.rs  types.rs
src/file/: manager.rs  mod.rs  piece_manager.rs  torrent_parser.rs
src/network/: connection.rs  mod.rs  tracker.rs
src/peer/: manager.rs  mod.rs  peer.rs
src/protocol/: handshake.rs  messages.rs  mod.rs
