[package]
name = "file-storage-system"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A BitTorrent-like file storage and sharing system"
license = "MIT"
repository = "https://github.com/yourusername/file-storage-system"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_bytes = "0.11"
sha1 = "0.10"
bitvec = "1.0"
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
rand = "0.8"
futures = "0.3"
bytes = "1.0"
url = "2.0"
clap = { version = "4.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
urlencoding = "2.1"
hex = "0.4"

[dev-dependencies]
tempfile = "3.0"
proptest = "1.0"

[[bin]]
name = "client"
path = "src/bin/client.rs"

[[bin]]
name = "network_test"
path = "src/bin/network_test.rs"

[lib]
name = "file_storage_system"
path = "src/lib.rs"